# fairsoft-core

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build_package.yml  test_and_build_package.yml  test_publish.yml  test_publish_pipy.yml
src/fairsoft_core/: EDAM_forFE.py  __init__.py  constants.py  exceptions.py
src/fairsoft_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fairsoft_core/cli/: io.py  main.py
src/fairsoft_core/cli/commands/: evaluate.py  indicator.py
src/fairsoft_core/evaluation/: __init__.py  all_indicators.py
src/fairsoft_core/feedback/: feedback.py
src/fairsoft_core/indicators/: a_indicators.py  computation.py  f_indicators.py  i_indicators.py  r_indicators.py  utils.py
src/fairsoft_core/inputs/: __init__.py  codemeta.py  codemeta_mappings.md  native_json.py
src/fairsoft_core/models/: fair_metrics.py  instance.py
src/fairsoft_core/scoring/: fair_scores.py
tests/functional/cli/: test_cli_evaluate.py  test_cli_indicator.py
tests/unit/indicators/: test_compA1_1.py  test_compA1_2.py  test_compA1_3.py  test_compA1_4.py  test_compA1_5.py  test_compA3_1.py  test_compA3_2.py  test_compA3_3.py  test_compA3_4.py  test_compA3_5.py  test_compF1_2.py  test_compF2_1.py  test_compF2_2.py  test_compF3_1.py  test_compF3_2.py  test_compF3_3.py  test_compI1_1.py  test_compI1_2.py  test_compI1_3.py  test_compI1_4.py  test_compI2_1.py  test_compI2_2.py  test_compI3_1.py  test_compR1_1.py  test_compR2_1.py  test_compR3_1.py  test_compR3_2.py  test_compR4_1.py  test_compR4_2.py  test_instance.py
