[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairsoft-core"
version = "0.1.2"
description = "Core FAIRsoft evaluation engine for research software metadata"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Eva Martin del Pico" }
]
dependencies = [
  "pydantic>=2,<3",
  "email-validator>=2,<3",
  "requests>=2.33"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "pydantic>=2,<3",
  "requests>=2.33",
  "email-validator>=2,<3"
]

[project.scripts]
fairsoft = "fairsoft_core.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fairsoft_core = ["feedback/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]